--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
       })(window,document,'script','dataLayer','GTM-5NWNRRZF');
     </script>
     <!-- End Google Tag Manager -->
+
+    <!--Analytics-->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCQJ7CKK7W"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LCQJ7CKK7W');
+    </script>
+    <!--Analytics final-->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
