--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 
     <!--Analytics-->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCQJ7CKK7W"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCQJ7CKK7W"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-LCQJ7CKK7W');
-    </script>
+    </script> -->
     <!--Analytics final-->
   </head>
   <body>
