--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           const storage_cookie = window.localStorage.getItem('consentCookies');
           if (!storage_cookie) {
-              document.getElementById('banner').style.display = 'block'; 
+              document.getElementById('banner').style.display = 'flex'; 
           }
       };
 
